--- a/grunt-js-build/package.json
+++ b/grunt-js-build/package.json
@@ -4,12 +4,20 @@
   "description": "Grunt example project",
   "main": "index.html",
   "devDependencies": {
-    "grunt": "~0.4.5",
     "ember-template-compiler": "~1.9.0-alpha",
-    "handlebars": "~2.0.0",
-    "grunt-ember-templates": "~0.5.0-alpha",
+    "grunt": "~0.4.5",
+    "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-clean": "~0.6.0"
+    "grunt-ember-templates": "~0.5.0-alpha",
+    "grunt-karma": "^0.10.1",
+    "handlebars": "~2.0.0",
+    "karma": "^0.12.31",
+    "karma-junit-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-qunit": "^0.1.4",
+    "qunitjs": "^1.16.0"
   }
 }
